--- a/servicios/copiador-de-senales.html
+++ b/servicios/copiador-de-senales.html
@@ -16,104 +16,102 @@
 
   <style>
     :root{
-      /* Colores y estilo iguales a la página principal */
-      --card:#0d1426;
-      --card2:#0a101f;
-      --stroke:#1e2a49;
-      --text:#e8eefc;
-      --muted:#9fb0d9;
-      --accent:#38bdf8;
+      --card:#0d1426; --card2:#0a101f; --stroke:#1e2a49;
+      --text:#e8eefc; --muted:#9fb0d9; --accent:#38bdf8;
     }
     *{box-sizing:border-box}
     html,body{height:100%}
     body{
-      margin:0;
-      font-family:Inter, ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial;
-      color:var(--text);
-      line-height:1.6;
+      margin:0; font-family:Inter, ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial;
+      color:var(--text); line-height:1.6;
       background:
         radial-gradient(1000px 600px at 10% -10%, #162347 0%, transparent 60%),
         linear-gradient(180deg, var(--card) 0%, var(--card2) 100%);
     }
     .wrap{width:100%}
     .card{
-      min-height:100vh;
-      width:100%;
-      margin:0;
+      min-height:100vh; width:100%; margin:0;
       padding:28px clamp(16px, 4vw, 40px);
-      border:1px solid var(--stroke);
-      border-radius:0;
+      border:1px solid var(--stroke); border-radius:0;
       box-shadow: 0 20px 50px rgba(0,0,0,.35), inset 0 0 0 1px rgba(255,255,255,.03);
-      display:flex;
-      flex-direction:column;
-      gap:18px;
+      display:flex; flex-direction:column; gap:20px;
     }
 
+    /* Header */
     header{
-      display:flex; align-items:center; justify-content:space-between;
-      gap:16px; flex-wrap:wrap;
-      padding-bottom:8px;
-      border-bottom:1px solid rgba(255,255,255,.06);
+      display:flex; align-items:center; gap:14px; flex-wrap:wrap;
+      padding-bottom:10px; border-bottom:1px solid rgba(255,255,255,.06)
     }
-    .brand{display:flex; align-items:center; gap:12px}
-    .brand img{height:64px; width:auto; border-radius:12px; box-shadow:0 4px 18px rgba(0,0,0,.35)}
-    h1{margin:0; font-size:clamp(1.6rem, 1.1rem + 2vw, 2.25rem)}
-    .muted{color:var(--muted); font-size:.95rem}
-
     .btn{
       display:inline-flex; align-items:center; justify-content:center;
       padding:10px 16px; border-radius:12px; font-weight:700;
-      text-decoration:none; color:#fff;
+      text-decoration:none; color:#fff; border:0; cursor:pointer;
       background:linear-gradient(180deg,#1f9be6,#0ea5e9);
       box-shadow:0 8px 20px rgba(14,165,233,.35);
       transition:transform .06s ease, box-shadow .2s ease;
-      border:0; cursor:pointer;
     }
     .btn:active{transform:translateY(1px); box-shadow:0 4px 12px rgba(14,165,233,.25)}
-    .btn.ghost{
-      background:transparent; border:1px solid #28406e; color:var(--text);
-    }
-    /* Icono dentro del botón */
-    .btn svg{
-      width:18px; height:18px; margin-right:8px; display:inline-block;
-      fill:currentColor;
-    }
+    .btn.ghost{background:transparent; border:1px solid #28406e; color:var(--text)}
+    .brand{display:flex; align-items:center; gap:12px}
+    .brand img{height:60px; width:auto; border-radius:12px; border:1px solid #1d2947; box-shadow:0 4px 18px rgba(0,0,0,.35)}
+    h1{margin:0; font-size:clamp(1.6rem, 1.1rem + 2vw, 2.25rem)}
+    .muted{color:var(--muted); font-size:.95rem}
 
+    /* Panel genérico */
     .panel{
       background:linear-gradient(180deg, #111a31, #0c1427);
       border:1px solid var(--stroke);
       border-radius:16px;
-      padding:16px;
+      padding:18px;
       box-shadow: 0 0 0 1px rgba(255,255,255,.02) inset, 0 10px 30px rgba(0,0,0,.25);
     }
+    .panel h2{margin:0 0 8px}
+    .panel .subtle{margin:0; color:var(--muted)}
 
-    .grid{
-      display:grid; gap:16px;
-      grid-template-columns: 1fr 1fr;
+    /* Hero layout */
+    .hero{
+      display:grid; gap:18px;
+      grid-template-columns: minmax(260px, 460px) 1fr;
+      align-items:center;
     }
-    @media (max-width: 900px){
-      .grid{grid-template-columns: 1fr}
+    @media (max-width: 980px){ .hero{grid-template-columns: 1fr} }
+
+    .media{
+      background:#0e162c; border:1px solid #1d2947; border-radius:14px;
+      padding:14px; display:flex; align-items:center; justify-content:center;
+    }
+    .media img{
+      width:100%; height:auto; max-width:520px; aspect-ratio: 1 / 1; object-fit:contain;
+      border-radius:10px; box-shadow:0 8px 24px rgba(0,0,0,.32);
     }
 
-    .hero img{
-      width:100%;
-      max-width:460px;      /* ↓↓↓ AJUSTA ESTE VALOR PARA CAMBIAR EL TAMAÑO */
-      height:auto;
-      border-radius:14px;
-      border:1px solid #1d2947; background:#0e162c; object-fit:cover;
-      margin-inline:auto;   /* centra en su columna */
+    .eyebrow{color:var(--muted); font-weight:600; letter-spacing:.4px; text-transform:uppercase; font-size:.8rem}
+    .headline{font-size:clamp(1.2rem, .9rem + 1.2vw, 1.6rem); margin:6px 0 10px; line-height:1.35}
+
+    /* Checklist */
+    .checklist{margin:10px 0 0; padding:0; list-style:none; display:grid; gap:8px}
+    .checklist li{
+      display:flex; gap:10px; align-items:flex-start; padding:8px 10px;
+      background:rgba(255,255,255,.02); border:1px solid rgba(255,255,255,.06); border-radius:10px;
     }
+    .checklist svg{flex:0 0 18px; width:18px; height:18px; opacity:.9}
+    .cta-row{display:flex; gap:12px; flex-wrap:wrap; margin-top:12px}
 
-    .list{margin:0; padding-left:18px}
-    .list li{margin:.25rem 0}
-
+    /* Pago */
+    .pay-grid{
+      display:grid; gap:14px; grid-template-columns: 1.2fr .8fr;
+    }
+    @media (max-width: 980px){ .pay-grid{grid-template-columns: 1fr} }
     .wallet{
       display:flex; gap:10px; align-items:center; flex-wrap:wrap;
       background:#0e162c; border:1px solid #1d2947; border-radius:12px; padding:10px 12px;
-      font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+      font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", monospace;
       word-break: break-all;
     }
     .wallet code{opacity:.95}
+    .note{color:var(--muted); font-size:.92rem}
+
+    /* Footer */
     .footer{
       margin-top:auto; text-align:center; color:var(--muted); font-size:.88rem;
       padding-top:8px; border-top:1px solid rgba(255,255,255,.06);
@@ -124,9 +122,10 @@
   <div class="wrap">
     <div class="card">
 
+      <!-- Header -->
       <header>
+        <a href="../index.html" class="btn ghost" aria-label="Volver al inicio">← Volver</a>
         <div class="brand">
-          <a href="../index.html" class="btn ghost" aria-label="Volver al inicio">← Volver</a>
           <img src="../logo.png" alt="Logo DGO Trading">
           <div>
             <h1>Software de Copiado</h1>
@@ -135,28 +134,45 @@
         </div>
       </header>
 
-      <section class="panel">
-        <div class="grid">
-          <div class="hero">
-            <!-- Sube tu imagen como servicios/copiador.jpg o cambia el nombre aquí -->
+      <!-- HERO -->
+      <section class="panel" aria-labelledby="hero-title">
+        <div class="hero">
+          <div class="media">
             <img src="./copiador.jpg" alt="Vista del Copiador de Señales">
           </div>
-          <div>
-            <h2 style="margin-top:0">Opera todo tu portafolio desde un solo origen, con consistencia y control, para escalar resultados sin multiplicar trabajo.</h2>
 
-            <h3>Características</h3>
-            <ul class="list">
-              <li>Stop Loss y Take Profit configurables, trailing stop y cierres parciales disponibles.</li>
-              <li>Riesgo ajustable por cuenta.</li>
-              <li>Soporte y acompañamiento en la puesta en marcha.</li>
-              <li>Garantía de funcionamiento.</li>
+          <div>
+            <div class="eyebrow" id="hero-title">DGO Trading — Software de Copiado</div>
+            <p class="headline">
+              Opera todo tu portafolio desde un solo origen, con consistencia y control, para escalar resultados sin multiplicar trabajo.
+            </p>
+
+            <h3 style="margin:10px 0 8px">Características</h3>
+            <ul class="checklist">
+              <li>
+                <!-- check icon -->
+                <svg viewBox="0 0 24 24" aria-hidden="true"><path fill="currentColor" d="M12 2a10 10 0 1010 10A10.011 10.011 0 0012 2Zm4.3 7.3-5.01 5.01a1 1 0 01-1.42 0l-2.17-2.17a1 1 0 011.42-1.42l1.46 1.46 4.3-4.3A1 1 0 1116.3 9.3Z"/></svg>
+                <span>Stop Loss y Take Profit configurables, trailing stop y cierres parciales disponibles.</span>
+              </li>
+              <li>
+                <svg viewBox="0 0 24 24" aria-hidden="true"><path fill="currentColor" d="M12 2a10 10 0 1010 10A10.011 10.011 0 0012 2Zm4.3 7.3-5.01 5.01a1 1 0 01-1.42 0l-2.17-2.17a1 1 0 011.42-1.42l1.46 1.46 4.3-4.3A1 1 0 1116.3 9.3Z"/></svg>
+                <span>Riesgo ajustable por cuenta.</span>
+              </li>
+              <li>
+                <svg viewBox="0 0 24 24" aria-hidden="true"><path fill="currentColor" d="M12 2a10 10 0 1010 10A10.011 10.011 0 0012 2Zm4.3 7.3-5.01 5.01a1 1 0 01-1.42 0l-2.17-2.17a1 1 0 011.42-1.42l1.46 1.46 4.3-4.3A1 1 0 1116.3 9.3Z"/></svg>
+                <span>Soporte y acompañamiento en la puesta en marcha.</span>
+              </li>
+              <li>
+                <svg viewBox="0 0 24 24" aria-hidden="true"><path fill="currentColor" d="M12 2a10 10 0 1010 10A10.011 10.011 0 0012 2Zm4.3 7.3-5.01 5.01a1 1 0 01-1.42 0l-2.17-2.17a1 1 0 011.42-1.42l1.46 1.46 4.3-4.3A1 1 0 1116.3 9.3Z"/></svg>
+                <span>Garantía de funcionamiento.</span>
+              </li>
             </ul>
 
-            <div style="display:flex; gap:12px; margin-top:12px; flex-wrap:wrap">
+            <div class="cta-row">
               <a class="btn" href="https://t.me/diegotrader6" target="_blank" rel="noopener">
-                <!-- Icono Telegram (SVG inline) -->
-                <svg viewBox="0 0 24 24" aria-hidden="true">
-                  <path d="M12 0C5.372 0 0 5.373 0 12s5.372 12 12 12 12-5.373 12-12S18.628 0 12 0zm5.802 7.651l-2.1 9.905c-.158.696-.572.866-1.158.54l-3.197-2.357-1.542 1.485c-.171.171-.314.314-.643.314l.229-3.241 5.897-5.321c.256-.229-.058-.358-.397-.129l-7.287 4.586-3.135-.98c-.681-.214-.696-.681.142-1.006l12.257-4.727c.572-.214 1.072.129.887 1.006z"/>
+                <!-- Telegram icon -->
+                <svg viewBox="0 0 24 24" aria-hidden="true" style="width:18px;height:18px;margin-right:8px;">
+                  <path fill="currentColor" d="M12 0C5.372 0 0 5.373 0 12s5.372 12 12 12 12-5.373 12-12S18.628 0 12 0zm5.802 7.651l-2.1 9.905c-.158.696-.572.866-1.158.54l-3.197-2.357-1.542 1.485c-.171.171-.314.314-.643.314l.229-3.241 5.897-5.321c.256-.229-.058-.358-.397-.129l-7.287 4.586-3.135-.98c-.681-.214-.696-.681.142-1.006l12.257-4.727c.572-.214 1.072.129.887 1.006z"/>
                 </svg>
                 Soporte por Telegram
               </a>
@@ -165,17 +181,29 @@
         </div>
       </section>
 
-      <section class="panel">
-        <h2 style="margin-top:0">Pago</h2>
-        <p class="muted" style="margin-top:-4px">Aceptamos USDT. Indica tu hash de pago para validar más rápido.</p>
+      <!-- Pago -->
+      <section class="panel" aria-labelledby="pay-title">
+        <div class="pay-grid">
+          <div>
+            <h2 id="pay-title" style="margin:0 0 4px">Pago</h2>
+            <p class="subtle">Aceptamos USDT. Indica tu hash de pago para validar más rápido.</p>
 
-        <h3 style="margin:12px 0 6px">USDT (TRC20)</h3>
-        <div class="wallet">
-          <code id="wallet">TSMsg3noEr7uVbSX18vihq37Brc2jPLE1z</code>
-          <button class="btn" onclick="copyWallet()">Copiar</button>
+            <h3 style="margin:14px 0 6px">USDT (TRC20)</h3>
+            <div class="wallet">
+              <code id="wallet">TSMsg3noEr7uVbSX18vihq37Brc2jPLE1z</code>
+              <button class="btn" onclick="copyWallet()">Copiar</button>
+            </div>
+            <p class="note" style="margin:8px 0 0">Al copiar la wallet, recuerda compartir tu hash de transacción para acelerar la validación.</p>
+          </div>
+
+          <!-- Columna derecha libre para crecer (manteniendo contenido) -->
+          <div style="display:flex; align-items:center; justify-content:center; border:1px dashed rgba(255,255,255,.08); border-radius:12px; padding:12px; min-height:110px;">
+            <span class="muted">Información complementaria (opcional)</span>
+          </div>
         </div>
       </section>
 
+      <!-- Footer -->
       <div class="footer">
         © <span id="yr"></span> DGO Trading. Todos los derechos reservados.
       </div>
@@ -187,7 +215,9 @@
     document.getElementById('yr').textContent = new Date().getFullYear();
     function copyWallet(){
       const t = document.getElementById('wallet').innerText.trim();
-      navigator.clipboard.writeText(t).then(()=>alert('Wallet copiada')).catch(()=>alert('No se pudo copiar'));
+      navigator.clipboard.writeText(t)
+        .then(()=>alert('Wallet copiada'))
+        .catch(()=>alert('No se pudo copiar'));
     }
   </script>
 </body>
